[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "load-forecasting"
version = "0.2.0"
description = "Automated EIA regional load forecasting (XGBoost) with multi-window forecasts, S3 storage, Airflow orchestration, and a FastAPI/Lambda serving layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "APScheduler>=3.10.4",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "statsmodels>=0.14.2",
  "streamlit>=1.35.0",
  "xgboost>=2.0.0",
  "scikit-learn>=1.4.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "mangum>=0.17.0",
  "fsspec>=2024.6.0",
  "s3fs>=2024.6.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
